--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             color: #ffffff;
         }
         .main-bg {
-            background: url("/Users/yeeungo/Documents/학술제/html/img1.jpg") no-repeat center center/cover;
+            background: url("./images/img1.jpg") no-repeat center center/cover;
         }
         .intro-bg {
-            background: url("/Users/yeeungo/Documents/학술제/html/img2.jpg") no-repeat center center/cover;
+            background: url("./images/img2.jpg") no-repeat center center/cover;
             position: relative;
         }
         .orgn-bg {
@@ -196,7 +196,7 @@
     <nav class="navbar">
         <ul>
             <li onclick="scrollToSection('main')">
-                <img src="/Users/yeeungo/Documents/학술제/html/logo2.png" alt="홈 로고" class="logo-menu" />
+                <img src="./images/logo2.png" alt="홈 로고" class="logo-menu" />
             </li>
             <li onclick="scrollToSection('intro')">기업소개</li>
             <li onclick="scrollToSection('orgn')">조직도</li>
@@ -214,7 +214,7 @@
     </section>
 
     <section id="intro" class="intro-bg">
-        <img src="/Users/yeeungo/Documents/학술제/html/img3.png" alt="데코 이미지" class="decor-image" />
+        <img src="./images/img3.png" alt="데코 이미지" class="decor-image" />
         <div class="section-content">
             <h2>글로벌 식품 기업, 파스타 팩토리</h2>
             <p>
@@ -228,7 +228,7 @@
 
     <section id="orgn" class="orgn-bg">
         <div class="section-content">
-            <img src="/Users/yeeungo/Documents/학술제/html/조직개요도2.png" alt="조직개요도 이미지" />
+            <img src="./images/조직도.png" alt="조직도 이미지" />
         </div>
     </section>
 </body>
