--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     <section id="orgn" class="orgn-bg">
         <div class="section-content">
-            <img src="../images/조직도.png" alt="조직도 이미지" />
+            <img src="../images/orgn.png" alt="조직도 이미지" />
         </div>
     </section>
 </body>
