--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             color: #ffffff;
         }
         .main-bg {
-            background: url("../images/img1.jpg") no-repeat center center/cover;
+            background: url("../images/img1.png") no-repeat center center/cover;
         }
         .intro-bg {
-            background: url("../images/img2.jpg") no-repeat center center/cover;
+            background: url("../images/img2.png") no-repeat center center/cover;
             position: relative;
         }
         .orgn-bg {
