--- a/PastaFactory/index.html
+++ b/PastaFactory/index.html
@@ -59,7 +59,7 @@
             color: #ffffff;
         }
         .main-bg {
-            background: url("./images/img1.PNG") no-repeat center center/cover;
+            background: url(".PastaFactory/images/img1.png") no-repeat center center/cover;
         }
         .intro-bg {
             background: url("./images/img2.PNG") no-repeat center center/cover;
